--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ torchvision
 openai
 ipykernel
 clingo
+bitsandbytes
 # New additions for local LLM inference and macOS support
 accelerate
 ipywidgets
